# parallel-hmm-model

./: .gitignore  CMakeLists.txt  README  pack.sh  results.txt
doc/: Makefile  config.tex  doc.tex  gmu.tex  reference.bib  titlepage.tex
models/: dna.emit  dna.obs  dna.trans  dna2.emit  dna2.trans  partofspeech.emit  partofspeech.obs  partofspeech.trans  two_english.obs
presentation/: Makefile  presentation.tex
presentation/fig/: vut-new.eps
src/: Array.h  BaumWelchAlgorithm.cc  BaumWelchAlgorithm.h  BaumWelchAlgorithmGPU.cc  BaumWelchAlgorithmGPU.h  ForwardAlgorithm.cc  ForwardAlgorithm.h  ForwardAlgorithmGPU.cc  ForwardAlgorithmGPU.cl  ForwardAlgorithmGPU.h  GPUImplementation.cc  GPUImplementation.h  HMMAlgorithm.h  Helpers.cpp  Helpers.h  HiddenMarkovModel.cpp  HiddenMarkovModel.h  Topology.cpp  Topology.h  ViterbiAlgorithm.cc  ViterbiAlgorithm.h  ViterbiAlgorithmGPU.cc  ViterbiAlgorithmGPU.cl  ViterbiAlgorithmGPU.h  clMain.cc  main.cc  main.cpp  mainGPU.cc  oclHelpers.cc  oclHelpers.h
